[package]
name = "cowshmup"
version = "0.1.0"
edition = "2021"

[features]
editor =  []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
egui-macroquad = "0.15.0"
macroquad = { version = "0.3.25", features = ["log", "backtrace"] }
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
thiserror = "1.0.40"
